fix: Extra padding on top of new message

--- a/app/src/main/res/raw/editor_style.css
+++ b/app/src/main/res/raw/editor_style.css
@@ -9,5 +9,5 @@ body {
     /* To have the spacing scroll with the mail it needs to be padding and not margin. */
     overflow-x: auto !important;
     margin: 0;
-    padding: 16px;
+    padding: 0 16px 0;
 }
